--- a/claw___order.html
+++ b/claw___order.html
@@ -20,8 +20,8 @@ Claw & Order
 ! TXT_MODE 0
 
 PAL 0
-0,82,204
-128,159,255
+3,30,255
+5,251,255
 255,255,255
 NAME blueprint
 
@@ -54,7 +54,7 @@ ITM 0 8,3
 ITM 0 13,6
 ITM 0 3,5
 EXT 15,7 1 0,8
-PAL 1
+PAL 0
 
 ROOM 1
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
@@ -80,7 +80,7 @@ ITM 0 4,4
 ITM 1 12,7
 ITM 1 3,9
 EXT 0,8 0 15,7
-PAL 1
+PAL 0
 
 TIL a
 11111111
@@ -12026,6 +12026,7 @@ CHAR 9835
 011011
 011000
 000000
+</script>
 </script>
 
 </head>
